Step 4 - Parse Tree/spl.output
Terminals unused in grammar

   APOSTROPHE


State 29 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: identifier COLON block ENDP identifier FULLSTOP
    2        | error COLON block ENDP identifier FULLSTOP
    3        | identifier error block ENDP identifier FULLSTOP
    4        | identifier COLON error ENDP identifier FULLSTOP
    5        | identifier COLON block error identifier FULLSTOP
    6        | identifier COLON block ENDP error FULLSTOP
    7        | identifier COLON block ENDP identifier error
    8        | error block ENDP identifier FULLSTOP
    9        | identifier COLON block error
   10        | error FULLSTOP

   11 block: DECLARATIONS declaration_block CODE statement_list
   12      | CODE statement_list
   13      | error declaration_block CODE statement_list
   14      | DECLARATIONS error CODE statement_list
   15      | DECLARATIONS declaration_block error statement_list
   16      | DECLARATIONS declaration_block CODE error
   17      | error statement_list
   18      | CODE error

   19 identifier: ID

   20 identifier_list: identifier
   21                | identifier_list COMMA identifier

   22 declaration_block: identifier_list OF TYPE type SEMICOLON
   23                  | declaration_block identifier_list OF TYPE type SEMICOLON
   24                  | declaration_block SEMICOLON

   25 type: CHARACTER
   26     | INTEGER
   27     | REAL

   28 statement_list: statement
   29               | statement_list SEMICOLON statement
   30               | error statement
   31               | statement error

   32 statement: assignment_statement
   33          | if_statement
   34          | do_statement
   35          | while_statement
   36          | for_statement
   37          | write_statement
   38          | read_statement

   39 assignment_statement: expression ASSIGN identifier

   40 if_statement: IF conditional THEN statement_list ENDIF
   41             | IF conditional THEN statement_list ELSE statement_list ENDIF

   42 do_statement: DO statement_list WHILE conditional ENDDO

   43 while_statement: WHILE conditional DO statement_list ENDWHILE

   44 for_statement: FOR identifier IS expression BY expression TO expression DO statement_list ENDFOR

   45 write_statement: WRITE BRA output_list KET
   46                | NEWLINE

   47 read_statement: READ BRA identifier KET

   48 output_list: value
   49            | output_list COMMA value

   50 logical_operator: AND
   51                 | OR

   52 basic_conditional: expression comparator expression
   53                  | NOT basic_conditional

   54 conditional: basic_conditional
   55            | conditional logical_operator basic_conditional

   56 comparator: EQUAL
   57           | NOT_EQUAL
   58           | LESS_THAN
   59           | GREATER_THAN
   60           | LESS_THAN_OR_EQUAL
   61           | GREATER_THAN_OR_EQUAL

   62 expression: term
   63           | expression term
   64           | expression PLUS term
   65           | expression MINUS term

   66 term: value
   67     | term TIMES value
   68     | term DIVIDE value

   69 value: identifier
   70      | constant
   71      | BRA expression KET

   72 constant: number_constant
   73         | character_constant

   74 character_constant: LETTER

   75 number_constant: DIGIT


Terminals, with rules where they appear

$end (0) 0
error (256) 2 3 4 5 6 7 8 9 10 13 14 15 16 17 18 30 31
FULLSTOP (258) 1 2 3 4 5 6 8 10
COMMA (259) 21 49
COLON (260) 1 2 4 5 6 7 9
SEMICOLON (261) 22 23 24 29
ASSIGN (262) 39
BRA (263) 45 47 71
KET (264) 45 47 71
EQUAL (265) 56
NOT_EQUAL (266) 57
LESS_THAN (267) 58
GREATER_THAN (268) 59
LESS_THAN_OR_EQUAL (269) 60
GREATER_THAN_OR_EQUAL (270) 61
PLUS (271) 64
MINUS (272) 65
TIMES (273) 67
DIVIDE (274) 68
APOSTROPHE (275)
ENDP (276) 1 2 3 4 6 7 8
DECLARATIONS (277) 11 14 15 16
CODE (278) 11 12 13 14 16 18
OF (279) 22 23
TYPE (280) 22 23
CHARACTER (281) 25
INTEGER (282) 26
REAL (283) 27
IF (284) 40 41
THEN (285) 40 41
ENDIF (286) 40 41
ELSE (287) 41
DO (288) 42 43 44
WHILE (289) 42 43
ENDDO (290) 42
ENDWHILE (291) 43
FOR (292) 44
IS (293) 44
BY (294) 44
TO (295) 44
ENDFOR (296) 44
WRITE (297) 45
READ (298) 47
NEWLINE (299) 46
NOT (300) 53
AND (301) 50
OR (302) 51
LETTER (303) 74
DIGIT (304) 75
ID (305) 19


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2 3 4 5 6 7 8 9 10, on right: 0
block (53)
    on left: 11 12 13 14 15 16 17 18, on right: 1 2 3 5 6 7 8 9
identifier (54)
    on left: 19, on right: 1 2 3 4 5 6 7 8 9 20 21 39 44 47 69
identifier_list (55)
    on left: 20 21, on right: 21 22 23
declaration_block (56)
    on left: 22 23 24, on right: 11 13 15 16 23 24
type (57)
    on left: 25 26 27, on right: 22 23
statement_list (58)
    on left: 28 29 30 31, on right: 11 12 13 14 15 17 29 40 41 42 43
    44
statement (59)
    on left: 32 33 34 35 36 37 38, on right: 28 29 30 31
assignment_statement (60)
    on left: 39, on right: 32
if_statement (61)
    on left: 40 41, on right: 33
do_statement (62)
    on left: 42, on right: 34
while_statement (63)
    on left: 43, on right: 35
for_statement (64)
    on left: 44, on right: 36
write_statement (65)
    on left: 45 46, on right: 37
read_statement (66)
    on left: 47, on right: 38
output_list (67)
    on left: 48 49, on right: 45 49
logical_operator (68)
    on left: 50 51, on right: 55
basic_conditional (69)
    on left: 52 53, on right: 53 54 55
conditional (70)
    on left: 54 55, on right: 40 41 42 43 55
comparator (71)
    on left: 56 57 58 59 60 61, on right: 52
expression (72)
    on left: 62 63 64 65, on right: 39 44 52 63 64 65 71
term (73)
    on left: 66 67 68, on right: 62 63 64 65 67 68
value (74)
    on left: 69 70 71, on right: 48 49 66 67 68
constant (75)
    on left: 72 73, on right: 70
character_constant (76)
    on left: 74, on right: 73
number_constant (77)
    on left: 75, on right: 72


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2

    program     go to state 3
    identifier  go to state 4


State 1

    2 program: error . COLON block ENDP identifier FULLSTOP
    8        | error . block ENDP identifier FULLSTOP
   10        | error . FULLSTOP

    error         shift, and go to state 5
    FULLSTOP      shift, and go to state 6
    COLON         shift, and go to state 7
    DECLARATIONS  shift, and go to state 8
    CODE          shift, and go to state 9

    block  go to state 10


State 2

   19 identifier: ID .

    $default  reduce using rule 19 (identifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: identifier . COLON block ENDP identifier FULLSTOP
    3        | identifier . error block ENDP identifier FULLSTOP
    4        | identifier . COLON error ENDP identifier FULLSTOP
    5        | identifier . COLON block error identifier FULLSTOP
    6        | identifier . COLON block ENDP error FULLSTOP
    7        | identifier . COLON block ENDP identifier error
    9        | identifier . COLON block error

    error  shift, and go to state 12
    COLON  shift, and go to state 13


State 5

   13 block: error . declaration_block CODE statement_list
   17      | error . statement_list

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 25
    identifier_list       go to state 26
    declaration_block     go to state 27
    statement_list        go to state 28
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 6

   10 program: error FULLSTOP .

    $default  reduce using rule 10 (program)


State 7

    2 program: error COLON . block ENDP identifier FULLSTOP

    error         shift, and go to state 5
    DECLARATIONS  shift, and go to state 8
    CODE          shift, and go to state 9

    block  go to state 43


State 8

   11 block: DECLARATIONS . declaration_block CODE statement_list
   14      | DECLARATIONS . error CODE statement_list
   15      | DECLARATIONS . declaration_block error statement_list
   16      | DECLARATIONS . declaration_block CODE error

    error  shift, and go to state 44
    ID     shift, and go to state 2

    identifier         go to state 45
    identifier_list    go to state 26
    declaration_block  go to state 46


State 9

   12 block: CODE . statement_list
   18      | CODE . error

    error    shift, and go to state 47
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 49
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 10

    8 program: error block . ENDP identifier FULLSTOP

    ENDP  shift, and go to state 50


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 program: identifier error . block ENDP identifier FULLSTOP

    error         shift, and go to state 5
    DECLARATIONS  shift, and go to state 8
    CODE          shift, and go to state 9

    block  go to state 51


State 13

    1 program: identifier COLON . block ENDP identifier FULLSTOP
    4        | identifier COLON . error ENDP identifier FULLSTOP
    5        | identifier COLON . block error identifier FULLSTOP
    6        | identifier COLON . block ENDP error FULLSTOP
    7        | identifier COLON . block ENDP identifier error
    9        | identifier COLON . block error

    error         shift, and go to state 52
    DECLARATIONS  shift, and go to state 8
    CODE          shift, and go to state 9

    block  go to state 53


State 14

   30 statement_list: error . statement

    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement             go to state 54
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 15

   71 value: BRA . expression KET

    BRA     shift, and go to state 15
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    expression          go to state 55
    term                go to state 38
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 16

   40 if_statement: IF . conditional THEN statement_list ENDIF
   41             | IF . conditional THEN statement_list ELSE statement_list ENDIF

    BRA     shift, and go to state 15
    NOT     shift, and go to state 56
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    basic_conditional   go to state 57
    conditional         go to state 58
    expression          go to state 59
    term                go to state 38
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 17

   42 do_statement: DO . statement_list WHILE conditional ENDDO

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 60
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 18

   43 while_statement: WHILE . conditional DO statement_list ENDWHILE

    BRA     shift, and go to state 15
    NOT     shift, and go to state 56
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    basic_conditional   go to state 57
    conditional         go to state 61
    expression          go to state 59
    term                go to state 38
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 19

   44 for_statement: FOR . identifier IS expression BY expression TO expression DO statement_list ENDFOR

    ID  shift, and go to state 2

    identifier  go to state 62


State 20

   45 write_statement: WRITE . BRA output_list KET

    BRA  shift, and go to state 63


State 21

   47 read_statement: READ . BRA identifier KET

    BRA  shift, and go to state 64


State 22

   46 write_statement: NEWLINE .

    $default  reduce using rule 46 (write_statement)


State 23

   74 character_constant: LETTER .

    $default  reduce using rule 74 (character_constant)


State 24

   75 number_constant: DIGIT .

    $default  reduce using rule 75 (number_constant)


State 25

   20 identifier_list: identifier .
   69 value: identifier .

    COMMA     reduce using rule 20 (identifier_list)
    OF        reduce using rule 20 (identifier_list)
    $default  reduce using rule 69 (value)


State 26

   21 identifier_list: identifier_list . COMMA identifier
   22 declaration_block: identifier_list . OF TYPE type SEMICOLON

    COMMA  shift, and go to state 65
    OF     shift, and go to state 66


State 27

   13 block: error declaration_block . CODE statement_list
   23 declaration_block: declaration_block . identifier_list OF TYPE type SEMICOLON
   24                  | declaration_block . SEMICOLON

    SEMICOLON  shift, and go to state 67
    CODE       shift, and go to state 68
    ID         shift, and go to state 2

    identifier       go to state 45
    identifier_list  go to state 69


State 28

   17 block: error statement_list .
   29 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 70

    $default  reduce using rule 17 (block)


State 29

   28 statement_list: statement .
   31               | statement . error

    error  shift, and go to state 71

    error      [reduce using rule 28 (statement_list)]
    SEMICOLON  reduce using rule 28 (statement_list)
    ENDP       reduce using rule 28 (statement_list)
    ENDIF      reduce using rule 28 (statement_list)
    ELSE       reduce using rule 28 (statement_list)
    WHILE      reduce using rule 28 (statement_list)
    ENDWHILE   reduce using rule 28 (statement_list)
    ENDFOR     reduce using rule 28 (statement_list)


State 30

   32 statement: assignment_statement .

    $default  reduce using rule 32 (statement)


State 31

   33 statement: if_statement .

    $default  reduce using rule 33 (statement)


State 32

   34 statement: do_statement .

    $default  reduce using rule 34 (statement)


State 33

   35 statement: while_statement .

    $default  reduce using rule 35 (statement)


State 34

   36 statement: for_statement .

    $default  reduce using rule 36 (statement)


State 35

   37 statement: write_statement .

    $default  reduce using rule 37 (statement)


State 36

   38 statement: read_statement .

    $default  reduce using rule 38 (statement)


State 37

   39 assignment_statement: expression . ASSIGN identifier
   63 expression: expression . term
   64           | expression . PLUS term
   65           | expression . MINUS term

    ASSIGN  shift, and go to state 72
    BRA     shift, and go to state 15
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    term                go to state 75
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 38

   62 expression: term .
   67 term: term . TIMES value
   68     | term . DIVIDE value

    TIMES   shift, and go to state 76
    DIVIDE  shift, and go to state 77

    $default  reduce using rule 62 (expression)


State 39

   66 term: value .

    $default  reduce using rule 66 (term)


State 40

   70 value: constant .

    $default  reduce using rule 70 (value)


State 41

   73 constant: character_constant .

    $default  reduce using rule 73 (constant)


State 42

   72 constant: number_constant .

    $default  reduce using rule 72 (constant)


State 43

    2 program: error COLON block . ENDP identifier FULLSTOP

    ENDP  shift, and go to state 78


State 44

   14 block: DECLARATIONS error . CODE statement_list

    CODE  shift, and go to state 79


State 45

   20 identifier_list: identifier .

    $default  reduce using rule 20 (identifier_list)


State 46

   11 block: DECLARATIONS declaration_block . CODE statement_list
   15      | DECLARATIONS declaration_block . error statement_list
   16      | DECLARATIONS declaration_block . CODE error
   23 declaration_block: declaration_block . identifier_list OF TYPE type SEMICOLON
   24                  | declaration_block . SEMICOLON

    error      shift, and go to state 80
    SEMICOLON  shift, and go to state 67
    CODE       shift, and go to state 81
    ID         shift, and go to state 2

    identifier       go to state 45
    identifier_list  go to state 69


State 47

   18 block: CODE error .
   30 statement_list: error . statement

    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    $default  reduce using rule 18 (block)

    identifier            go to state 48
    statement             go to state 54
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 48

   69 value: identifier .

    $default  reduce using rule 69 (value)


State 49

   12 block: CODE statement_list .
   29 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 70

    $default  reduce using rule 12 (block)


State 50

    8 program: error block ENDP . identifier FULLSTOP

    ID  shift, and go to state 2

    identifier  go to state 82


State 51

    3 program: identifier error block . ENDP identifier FULLSTOP

    ENDP  shift, and go to state 83


State 52

    4 program: identifier COLON error . ENDP identifier FULLSTOP
   13 block: error . declaration_block CODE statement_list
   17      | error . statement_list

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    ENDP     shift, and go to state 84
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 25
    identifier_list       go to state 26
    declaration_block     go to state 27
    statement_list        go to state 28
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 53

    1 program: identifier COLON block . ENDP identifier FULLSTOP
    5        | identifier COLON block . error identifier FULLSTOP
    6        | identifier COLON block . ENDP error FULLSTOP
    7        | identifier COLON block . ENDP identifier error
    9        | identifier COLON block . error

    error  shift, and go to state 85
    ENDP   shift, and go to state 86


State 54

   30 statement_list: error statement .

    $default  reduce using rule 30 (statement_list)


State 55

   63 expression: expression . term
   64           | expression . PLUS term
   65           | expression . MINUS term
   71 value: BRA expression . KET

    BRA     shift, and go to state 15
    KET     shift, and go to state 87
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    term                go to state 75
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 56

   53 basic_conditional: NOT . basic_conditional

    BRA     shift, and go to state 15
    NOT     shift, and go to state 56
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    basic_conditional   go to state 88
    expression          go to state 59
    term                go to state 38
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 57

   54 conditional: basic_conditional .

    $default  reduce using rule 54 (conditional)


State 58

   40 if_statement: IF conditional . THEN statement_list ENDIF
   41             | IF conditional . THEN statement_list ELSE statement_list ENDIF
   55 conditional: conditional . logical_operator basic_conditional

    THEN  shift, and go to state 89
    AND   shift, and go to state 90
    OR    shift, and go to state 91

    logical_operator  go to state 92


State 59

   52 basic_conditional: expression . comparator expression
   63 expression: expression . term
   64           | expression . PLUS term
   65           | expression . MINUS term

    BRA                    shift, and go to state 15
    EQUAL                  shift, and go to state 93
    NOT_EQUAL              shift, and go to state 94
    LESS_THAN              shift, and go to state 95
    GREATER_THAN           shift, and go to state 96
    LESS_THAN_OR_EQUAL     shift, and go to state 97
    GREATER_THAN_OR_EQUAL  shift, and go to state 98
    PLUS                   shift, and go to state 73
    MINUS                  shift, and go to state 74
    LETTER                 shift, and go to state 23
    DIGIT                  shift, and go to state 24
    ID                     shift, and go to state 2

    identifier          go to state 48
    comparator          go to state 99
    term                go to state 75
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 60

   29 statement_list: statement_list . SEMICOLON statement
   42 do_statement: DO statement_list . WHILE conditional ENDDO

    SEMICOLON  shift, and go to state 70
    WHILE      shift, and go to state 100


State 61

   43 while_statement: WHILE conditional . DO statement_list ENDWHILE
   55 conditional: conditional . logical_operator basic_conditional

    DO   shift, and go to state 101
    AND  shift, and go to state 90
    OR   shift, and go to state 91

    logical_operator  go to state 92


State 62

   44 for_statement: FOR identifier . IS expression BY expression TO expression DO statement_list ENDFOR

    IS  shift, and go to state 102


State 63

   45 write_statement: WRITE BRA . output_list KET

    BRA     shift, and go to state 15
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    output_list         go to state 103
    value               go to state 104
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 64

   47 read_statement: READ BRA . identifier KET

    ID  shift, and go to state 2

    identifier  go to state 105


State 65

   21 identifier_list: identifier_list COMMA . identifier

    ID  shift, and go to state 2

    identifier  go to state 106


State 66

   22 declaration_block: identifier_list OF . TYPE type SEMICOLON

    TYPE  shift, and go to state 107


State 67

   24 declaration_block: declaration_block SEMICOLON .

    $default  reduce using rule 24 (declaration_block)


State 68

   13 block: error declaration_block CODE . statement_list

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 108
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 69

   21 identifier_list: identifier_list . COMMA identifier
   23 declaration_block: declaration_block identifier_list . OF TYPE type SEMICOLON

    COMMA  shift, and go to state 65
    OF     shift, and go to state 109


State 70

   29 statement_list: statement_list SEMICOLON . statement

    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement             go to state 110
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 71

   31 statement_list: statement error .

    $default  reduce using rule 31 (statement_list)


State 72

   39 assignment_statement: expression ASSIGN . identifier

    ID  shift, and go to state 2

    identifier  go to state 111


State 73

   64 expression: expression PLUS . term

    BRA     shift, and go to state 15
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    term                go to state 112
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 74

   65 expression: expression MINUS . term

    BRA     shift, and go to state 15
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    term                go to state 113
    value               go to state 39
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 75

   63 expression: expression term .
   67 term: term . TIMES value
   68     | term . DIVIDE value

    TIMES   shift, and go to state 76
    DIVIDE  shift, and go to state 77

    $default  reduce using rule 63 (expression)


State 76

   67 term: term TIMES . value

    BRA     shift, and go to state 15
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    value               go to state 114
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 77

   68 term: term DIVIDE . value

    BRA     shift, and go to state 15
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2

    identifier          go to state 48
    value               go to state 115
    constant            go to state 40
    character_constant  go to state 41
    number_constant     go to state 42


State 78

    2 program: error COLON block ENDP . identifier FULLSTOP

    ID  shift, and go to state 2

    identifier  go to state 116


State 79

   14 block: DECLARATIONS error CODE . statement_list

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 117
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 80

   15 block: DECLARATIONS declaration_block error . statement_list

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 118
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 81

   11 block: DECLARATIONS declaration_block CODE . statement_list
   16      | DECLARATIONS declaration_block CODE . error

    error    shift, and go to state 119
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 120
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 82

    8 program: error block ENDP identifier . FULLSTOP

    FULLSTOP  shift, and go to state 121


State 83

    3 program: identifier error block ENDP . identifier FULLSTOP

    ID  shift, and go to state 2

    identifier  go to state 122


State 84

    4 program: identifier COLON error ENDP . identifier FULLSTOP

    ID  shift, and go to state 2

    identifier  go to state 123


State 85

    5 program: identifier COLON block error . identifier FULLSTOP
    9        | identifier COLON block error .

    ID  shift, and go to state 2

    $default  reduce using rule 9 (program)

    identifier  go to state 124


State 86

    1 program: identifier COLON block ENDP . identifier FULLSTOP
    6        | identifier COLON block ENDP . error FULLSTOP
    7        | identifier COLON block ENDP . identifier error

    error  shift, and go to state 125
    ID     shift, and go to state 2

    identifier  go to state 126


State 87

   71 value: BRA expression KET .

    $default  reduce using rule 71 (value)


State 88

   53 basic_conditional: NOT basic_conditional .

    $default  reduce using rule 53 (basic_conditional)


State 89

   40 if_statement: IF conditional THEN . statement_list ENDIF
   41             | IF conditional THEN . statement_list ELSE statement_list ENDIF

    error    shift, and go to state 14
    BRA      shift, and go to state 15
    IF       shift, and go to state 16
    DO       shift, and go to state 17
    WHILE    shift, and go to state 18
    FOR      shift, and go to state 19
    WRITE    shift, and go to state 20
    READ     shift, and go to state 21
    NEWLINE  shift, and go to state 22
    LETTER   shift, and go to state 23
    DIGIT    shift, and go to state 24
    ID       shift, and go to state 2

    identifier            go to state 48
    statement_list        go to state 127
    statement             go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    do_statement          go to state 32
    while_statement       go to state 33
    for_statement         go to state 34
    write_statement       go to state 35
    read_statement        go to state 36
    expression            go to state 37
    term                  go to state 38
    value                 go to state 39
    constant              go to state 40
    character_constant    go to state 41
    number_constant       go to state 42


State 90

   50 logical_operator: AND .

    $default  reduce using rule 50 (logical_operator)


State 91

   51 logical_operator: OR .

    $default  reduce using rule 51 (logical_operator)


State 92

   55 conditional: conditional logical_operator . basic_conditional

    BRA     shift, and go to state 15
    NOT     shift, and go to state 56
    LETTER  shift, and go to state 23
    DIGIT   shift, and go to state 24
    ID      shift, and go to state 2
